--- a/Sample Web App/Views/Home/About.cshtml
+++ b/Sample Web App/Views/Home/About.cshtml
@@ -5,3 +5,4 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+<p>Hello!! This is some extra stuff to prove that the full CI/CD pipeline works!</p>
