--- a/Sample Web App/Views/Home/About.cshtml
+++ b/Sample Web App/Views/Home/About.cshtml
@@ -6,3 +6,4 @@
 
 <p>Use this area to provide additional information.</p>
 <p>Hello!! This is some extra stuff to prove that the full CI/CD pipeline works!</p>
+<p>...Just one more bit of information to prove it is all working!</p>
